TEST_PROGRAMS/INVALID/scott_cooper/invalid_int.min
# Scott Cooper
# 260503452
# COMP520 - Winter 2016
#
# Should not allow multiple zeroes for an integer

var x : int;
x = 00;

